rewrite to esm, update dependencies

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -16,10 +16,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: 22
 
-      - run: npm install
+      - run: npm ci
 
       - name: Run ESLint
-        run: npm run lint
+        run: npm run eslint
         continue-on-error: true
