--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,42 @@
-node_modules/
-coverage/
-.jest/
+*~
+.settings
+.buildpath
+.project
 .idea/
-
-.DS_Store
-*.log
+vendor/
+composer.phar
+composer.lock
+build/build*/
+error.log
+ergebnis.txt
+result.txt
+phpunit.txt
+resources/browscap-*/
+tests/create-tests.php
+cache/*
+!cache/.gitkeep
+tests/temp/*.php
+tests/temp/*.ini
+.php-cs-fixer.cache
+.phplint-cache
+.phpunit.result.cache
+.phpcs.cache
+.stylelintcache
+infection-*.log
+rewrite*.php
+.reports/
+node_modules/
+.build/
+dist/
+package-lock.json
+.reports
+*.bak
+*.txt
+junit-report.xml
+/src/**/*.js
+/src/*.js
+/src/**/*.map
+/src/**/*.d.ts
+/cypress/**/*.js
+/cypress/**/*.map
+/cypress/**/*.d.ts
