--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,24 @@
-# editorconfig.org
+; This file is for unifying the coding style for different editors and IDEs.
+; More information at http://editorconfig.org
+
+; file-version: 2.0
+
 root = true
 
 [*]
 charset = utf-8
 end_of_line = lf
-indent_size = 2
-indent_style = space
 insert_final_newline = true
+indent_style = space
+indent_size = 4
 trim_trailing_whitespace = true
+
+[*.{js,ts,cjs,cts,mjs,mts,json,json5,yaml,yml,neon}]
+indent_size = 2
+
+[test/fixture-data/*.json]
+insert_final_newline = false
+
+[*.md]
+indent_size = 2
+trim_trailing_whitespace = false
