--- a/package.json
+++ b/package.json
@@ -32,17 +32,27 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
-    "eslint": "^9.24.0",
+    "eslint": "^9.29.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-promise": "^7.2.1",
+    "globals": "^16.2.0",
     "prettier": "^3.5.3",
+    "prettier-eslint": "^16.4.2",
+    "stylelint": "^16.18.0",
     "stylelint-test-rule-node": "^0.4.0",
-    "stylelint": "^16.18.0"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.33.0"
   },
   "peerDependencies": {
     "stylelint": "^16.18.0"
   },
-  "type": "module"
+  "type": "module",
+  "overrides": {
+    "eslint": "$eslint"
+  },
+  "engines": {
+    "node": "^20.19.0 || ^22.12.0 || >= 24.0.0"
+  }
 }
