--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -7,6 +7,9 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ "master" ]
 
+permissions:
+  contents: read
+
 jobs:
   eslint:
     name: Run ESLint scanning
