--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -28,8 +28,9 @@ updates:
 
     commit-message:
       include: "scope"
-      prefix: "npm"
+      prefix: "npm (master)"
 
+    # Disable rebasing for all pull requests
     rebase-strategy: "disabled"
 
   - package-ecosystem: "github-actions"
@@ -52,10 +53,11 @@ updates:
       - "dependencies"
 
     commit-message:
-      prefix: "github-actions"
+      prefix: "github-actions (master)"
 
     ignore:
       - dependency-name: "mimmi20/ci"
       - dependency-name: "release-drafter/release-drafter"
 
+    # Disable rebasing for all pull requests
     rebase-strategy: "disabled"
