--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,9 +10,8 @@ updates:
     directory: "/"
 
     schedule:
-      interval: "weekly"
-      day: "sunday"
-      time: "04:00"
+      interval: "cron"
+      cronjob: "0 4 19 * *"
       timezone: "Europe/Berlin"
 
     cooldown:
@@ -38,9 +37,8 @@ updates:
     directory: "/"
 
     schedule:
-      interval: "weekly"
-      day: "sunday"
-      time: "04:00"
+      interval: "cron"
+      cronjob: "0 4 19 * *"
       timezone: "Europe/Berlin"
 
     cooldown:
