--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,12 @@ updates:
     cooldown:
       default-days: 7
 
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+      development-dependencies:
+        dependency-type: "development"
+
     assignees:
       - "mimmi20"
 
@@ -44,6 +50,12 @@ updates:
     cooldown:
       default-days: 7
 
+    groups:
+      production-dependencies:
+        dependency-type: "production"
+      development-dependencies:
+        dependency-type: "development"
+
     assignees:
       - "mimmi20"
 
@@ -54,7 +66,14 @@ updates:
       prefix: "github-actions (master)"
 
     ignore:
-      - dependency-name: "mimmi20/ci"
+      - dependency-name: "mimmi20/ci/.github/workflows/validate.yml"
+      - dependency-name: "mimmi20/ci/.github/workflows/cleanup-cache.yml"
+      - dependency-name: "mimmi20/ci/.github/workflows/install.yml"
+      - dependency-name: "mimmi20/ci/.github/workflows/analytics.yml"
+      - dependency-name: "mimmi20/ci/.github/workflows/test.yml"
+      - dependency-name: "mimmi20/ci/.github/workflows/review-dependency.yml"
+      - dependency-name: "mimmi20/ci/.github/workflows/lint-actions.yml"
+      - dependency-name: "mimmi20/ci/.github/workflows/sync-labels.yml"
       - dependency-name: "release-drafter/release-drafter"
 
     # Disable rebasing for all pull requests
