--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -10,6 +10,10 @@ on:
 
 permissions:
   contents: read
+  security-events: read
+  issues: read
+  pull-requests: read
+  checks: read
 
 concurrency:
   group: "${{ github.event_name }}-${{ github.workflow }}-${{ github.head_ref || github.run_id }}-${{ github.ref }}"
@@ -44,9 +48,21 @@ jobs:
       composer-options: "--optimize-autoloader --prefer-dist --prefer-stable -v"
       skip-php-install: true
       skip-npm-install: false
+      skip-nasm-install: false
+      skip-libimagequant-install: false
+      skip-librabbitmq-install: true
+      skip-libgif-install: true
 
   analytics:
     name: "Project Analysis"
+
+    permissions:
+      security-events: write
+      id-token: write
+      contents: read
+      issues: read
+      pull-requests: read
+      checks: read
 
     needs: "install"
 
@@ -62,6 +78,12 @@ jobs:
       skip-eslint: false
       skip-stylelint: true
       skip-prettier: false
+      skip-nasm-install: false
+      skip-libimagequant-install: false
+      skip-librabbitmq-install: true
+      skip-libgif-install: true
+      skip-oxlint: true
+      use-code-scanning: false
       phpcs-options: ""
 
 #  tests:
