--- a/.github/workflows/lint-workflow-files.yml
+++ b/.github/workflows/lint-workflow-files.yml
@@ -14,6 +14,7 @@ jobs:
     with:
       skip-nasm-install: false
       skip-libimagequant-install: false
+      skip-libpng-install: true
       skip-librabbitmq-install: true
       skip-libgif-install: true
 
